--- a/charts/kube-plex/templates/deployment.yaml
+++ b/charts/kube-plex/templates/deployment.yaml
@@ -85,6 +85,8 @@ spec:
           value: http://{{ template "fullname" . }}:32400
         - name: PMS_IMAGE
           value: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        - name: VERSION
+          value: latest
         - name: KUBE_NAMESPACE
           valueFrom:
             fieldRef:
