--- a/charts/kube-plex/templates/volumes.yaml
+++ b/charts/kube-plex/templates/volumes.yaml
@@ -25,6 +25,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ template "fullname" . }}-config
+  annotations:
+    volume.beta.kubernetes.io/storage-class: "slow"
   labels:
     app: {{ template "name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
