--- a/charts/kube-plex/values.yaml
+++ b/charts/kube-plex/values.yaml
@@ -61,7 +61,8 @@ rbac:
   ## serviceAccountName: ""
 
 nodeSelector:
-  beta.kubernetes.io/arch: amd64
+  beta.kubernetes.io/arch: arm
+  disktype: huge
 
 persistence:
   transcode:
